# birch-girder

./: .gitignore  Pipfile  README.md  birch-girder-install-2.cast  birch-girder-install.cast  clean.py  deploy.py  emit-comment-to-sns-github-action.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
artifacts/: README.md
birch_girder/: __init__.py  config.example.yaml  deploy.py  process_email.py  process_github_webhook.py  process_ses_notification.py  setup_logging.py  templates.py  utils.py
docs/: build-and-upload-birch-girder.md  deploy-hook.io-service.md  example-event-payloads.json  example-event-payloads.md
hook.io/: hook.io.py
plugins/: example.py  example_suppress.py  example_transform.py
tests/: test_birch-girder.py
